fixed background and opening facets on small screens, rotating carrot

--- a/ui/src/app/App.scss
+++ b/ui/src/app/App.scss
@@ -103,3 +103,9 @@ th.clickable {
 .aleph-toaster {
   margin-top: $aleph-grid-size * 5;
 }
+
+@media screen and (max-width: $aleph-screen-sm-max-width) {
+    .visible-md-flex {
+      display: flex !important;
+    }
+}
