--- a/ui/src/app/variables.scss
+++ b/ui/src/app/variables.scss
@@ -6,7 +6,7 @@ $aleph-font-size: $pt-font-size;
 $aleph-line-height: $pt-line-height;
 $aleph-border-radius: $pt-border-radius;
 
-$aleph-screen-xs-max-width: 576px;
+$aleph-screen-sm-max-width: 576px;
 
 $aleph-page-background: $light-gray5;
 $aleph-banner-background: $dark-gray3;
