--- a/ui/src/components/Facet/SearchFacets.scss
+++ b/ui/src/components/Facet/SearchFacets.scss
@@ -7,3 +7,9 @@
   padding-left: 0;
   list-style: none;
 }
+
+@media screen and (max-width: $aleph-screen-sm-max-width) {
+  .SearchFacets {
+    margin-top: 0;
+  }
+}
